<resources>
    <string name="app_name">Maitre App</string>
    <string name="titulos">
        <!--  adicionar aqui todos os titulos principais  -->
    </string>
    <string name="Entrar">
        Entrar
    </string>
    <string name="CriarConta">
        Criar Conta
    </string>
    <string name="Estabelecimentos">Estabelecimentos</string>
    <string name="EstabelecimentosMais">Estabelecimentos mais visitados</string>
    <string name="CategoriaPetisco">Categoria: Petiscos</string>
    <string name="AlterarPerfil">Alterar perfil</string>
    <!--    _____________________________________________________-->
    <string name="subtitulos">
        <!--        //adicionar aqui todos os conteudos que forem subtitulos-->
    </string>
    <string name="NãoPossuiConta">
        Não possui conta?
    </string>
    <string name="Cadastrese">
        <u>cadastre-se</u>
    </string>
    <string name="JaTemConta">
        Ja tem uma conta?
    </string>
    <string name="EntrarPequeno">
        <u>entrar</u>
    </string>
    <!--    _____________________________________________________-->

    <string name="textos">
        <!--        // adicionar aqui todos os textos do app-->
    </string>
    <string name="UserName">Liz Smith</string>
    <string name="EmailUsuario">liz@gmail.com</string>
    <string name="BoasVindas">Bem-vindo (a)</string>
    <string name="Telefone">(00) 0 0000-0000</string>
    <string name="UmCifrao">$</string>
    <string name="DoisCifroes">$$</string>
    <string name="TresCifroes">$$$</string>
<<<<<<< Updated upstream
=======
    <string name="reservas">Reservas</string>
    <string name="beerwings">Beerwings</string>
    <string name="notaBar1">4.8</string>
    <string name="assento">Assento(s):</string>
    <string name="numAssento">1 e 2</string>
    <string name="nome">Nome(s): </string>
    <string name="nomesReserva">Anna Smith e Liz Smith</string>
    <string name="dia">Dia: </string>
    <string name="hora">Hora: </string>
    <string name="dataReserva">22/10/23</string>
    <string name="madureira">Madureira</string>
    <string name="dataReserva1">30/08/23</string>
    <string name="horaReserva">23h00</string>
    <string name="feedback">Feedback: </string>
    <string name="title_Lgpd">Permissão de uso de dados </string>
    <string name="Lgpd_item">Confirma saber que nosso sistema está de acordo com a LGDP. </string>
    <string name="yes">Sim </string>
    <string name="no">Não </string>


    <string name="textoFeedback1"> Nos conte sua experiência sobre a sua reserva:</string>
    <string name="textoFeedback2"> Nos conte sua experiência sobre a sua reserva ...</string>
    <string name="confirmarReserva"> Confirmar reserva</string>
    <string name="textoCancelar"> Selecione a opção desejada: </string>
    <string name="feedbacks"> Feedback </string>
    <string name="cancelarReserva"> Cancelar reserva</string>
    <string name="desejaConfirmar"> Deseja confirmar? </string>
    <string name="textoConfirmação"> Após confirmar a  reserva, a mesma aparecerá na aba "reservas"</string>
    <string name="sim"> Sim </string>
    <string name="cancelar"> Cancelar </string>
    <string name="fila"> Fila </string>
    <string name="textoFila"> Sua posição é a ... </string>
    <string name="telefone"> Telefone </string>
    <string name="numeroTelefone">(11) 91234-5678 </string>

>>>>>>> Stashed changes
    <!--    _____________________________________________________-->

    <string name="botoes">
        <!--        // adicionar aqui todos os textos usados em botões-->
    </string>

    <string name="botao_cadastrese"> Cadastre-se

    </string>
    <string name="botao_login"> Login

    </string>
    <string name="Atualizar">Atualizar</string>
    <string name="Avancar">Avançar</string>
    <!--    _____________________________________________________-->


    <!--       // adicionar aqui todos os textos que forem placeholders de inputs-->


    <string name="placeholderEmail">usuario@email.com</string>
    <string name="placeholderSenha">••••••••••••••••••</string>
    <string name="Pesquisar">Pesquisar</string>
    <!--    _____________________________________________________-->
    <string name="selecioneData">Selecione a Data &amp; Horário</string>
    <string name="quantidadeReservas">Quantidade de reservas:</string>
    <string name="Nome">Nome:</string>
    <string name="DataNascimento">Data de nascimento:</string>
    <string name="RG">RG:</string>
    <string name="CPF">CPF:</string>
    <string name="Celular">Celular:</string>
    <string name="Email">E-mail:</string>
    <string name="SenhaAntiga">Senha antiga:</string>
    <string name="SenhaNova">Nova senha:</string>
    <string name="ConfimarSenhaNova">Confirmar senha:</string>
</resources>