<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AlterarPerfil">
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            style="@style/CardViewTopTitle"
            android:background="@color/begeClaro"
            android:gravity="center_vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_arrow_back_white"
                android:text="@string/AlterarPerfil"
                style="@style/PadraoCabecalho"/>
        </LinearLayout>
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginHorizontal="40dp"
                android:layout_marginVertical="20dp"
                android:gravity="center">

                <TextView
                    style="@style/PlaceholderForm"
                    android:text="@string/Nome"/>
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text" />
                <TextView
                    style="@style/PlaceholderForm"
                    android:text="@string/DataNascimento"/>
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="date"/>
                <TextView
                    style="@style/PlaceholderForm"
                    android:text="@string/RG"/>
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"/>
                <TextView
                    style="@style/PlaceholderForm"
                    android:text="@string/CPF"/>
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"/>
                <TextView
                    style="@style/PlaceholderForm"
                    android:text="@string/Celular"/>
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="phone"/>
                <TextView
                    style="@style/PlaceholderForm"
                    android:text="@string/Email"/>
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"/>
                <TextView
                    style="@style/PlaceholderForm"
                    android:text="@string/SenhaAntiga"/>
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"/>
                <TextView
                    style="@style/PlaceholderForm"
                    android:text="@string/SenhaNova"/>
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"/>
                <TextView
                    style="@style/PlaceholderForm"
                    android:text="@string/ConfimarSenhaNova"/>
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"/>
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Atualizar"
                    android:layout_marginVertical="10dp"
                    android:backgroundTint="@color/begeClaro"/>
            </LinearLayout>
        </ScrollView>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>