<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Reservas">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/branco"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">

<!--        Card verde escuro -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="165dp"
            android:background="@color/verdeEscuro">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="33dp"
                android:layout_marginTop="65dp"
                android:fontFamily="@font/old_standard_tt_bold"
                android:text="@string/reservas"
                android:textColor="@color/branco"
                android:textSize="40sp">

            </TextView>

<!--            Seta: voltar -->
            <ImageButton
                style="@style/botaoSeta"
                android:layout_marginStart="130dp"
                android:layout_marginTop="50dp"
                android:contentDescription="botão de voltar"
                tools:ignore="HardcodedText" />

        </LinearLayout>

<!--        Card de reserva-->
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
                <androidx.cardview.widget.CardView
                    android:layout_width="390dp"
                    android:layout_height="210dp"
                    android:layout_rowWeight="1"
                    android:layout_columnWeight="1"
                    android:layout_gravity="start"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="180dp"/>

                <LinearLayout
                    android:layout_width="160dp"
                    android:layout_height="210dp"
                    android:orientation="vertical"
                    android:padding="5dp">

                    <ImageView
                        android:layout_width="150dp"
                        android:layout_height="120dp"
                        android:layout_marginStart="10dp"
                        android:clickable="true"
                        android:src="@mipmap/bar"
                        android:focusable="true" />


                    <TextView
                        android:layout_width="120dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:fontFamily="@font/quicksand_light"
                        android:gravity="left"
                        android:text="@string/beerwings"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="25dp">


                        <TextView
                            android:layout_marginStart="13dp"
                            android:fontFamily="@font/quicksand_light"
                            android:text="@string/TresCifroes"
                            android:layout_height="30dp"
                            android:layout_width="30dp"
                            android:textSize="15sp"/>

                        <TextView
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:gravity="left"
                            app:drawableRightCompat="@drawable/ic_star"
                            />

                        <TextView
                            android:layout_marginStart="10dp"
                            android:fontFamily="@font/quicksand_light"
                            android:gravity="center_vertical"
                            android:text="@string/notaBar1"
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:textSize="15sp"/>

                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                android:layout_width="160dp"
                android:layout_height="205dp"
                android:layout_marginStart="200dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="20dp"
                    android:layout_marginTop="20dp"
                    android:fontFamily="@font/quicksand_bold"
                    android:text="@string/assento"
                    android:textSize="18sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="20dp"
                    android:fontFamily="@font/quicksand_light"
                    android:text="@string/numAssento"
                    android:textSize="15sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="20dp"
                    android:layout_marginTop="5dp"
                    android:fontFamily="@font/quicksand_bold"
                    android:text="@string/nome"
                    android:textSize="18sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="20dp"
                    android:fontFamily="@font/quicksand_light"
                    android:text="@string/nomesReserva"
                    android:textSize="15sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="20dp"
                    android:layout_marginTop="5dp"
                    android:fontFamily="@font/quicksand_bold"
                    android:text="@string/dia"
                    android:textSize="18sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="20dp"
                    android:fontFamily="@font/quicksand_light"
                    android:text="@string/dataReserva"
                    android:textSize="15sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="20dp"
                    android:layout_marginTop="5dp"
                    android:fontFamily="@font/quicksand_bold"
                    android:text="@string/hora"
                    android:textSize="18sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="20dp"
                    android:fontFamily="@font/quicksand_light"
                    android:text="@string/horaReserva"
                    android:textSize="15sp"/>

        </LinearLayout>
        </LinearLayout>
        </ScrollView>

        <androidx.cardview.widget.CardView
            android:layout_width="390dp"
            android:layout_height="210dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_gravity="start"
            android:layout_marginStart="10dp"
            android:layout_marginTop="400dp">

            <LinearLayout
                android:layout_width="150dp"
                android:layout_height="210dp"
                android:orientation="vertical"
                android:padding="5dp">

                <ImageView
                    android:layout_width="150dp"
                    android:layout_height="120dp"
                    android:layout_marginStart="10dp"
                    android:clickable="true"
                    android:src="@mipmap/bar_madureira"
                    android:focusable="true"
                    android:contentDescription="Foto do bar"
                    tools:ignore="HardcodedText" />


                <TextView
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="25dp"
                    android:fontFamily="@font/quicksand_light"
                    android:gravity="left"
                    android:text="@string/madureira"
                    android:textStyle="bold"
                    tools:ignore="RtlHardcoded" />

                <LinearLayout
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="25dp"
                    android:gravity="left"
                    tools:ignore="RtlHardcoded">

                    <TextView
                        android:layout_marginStart="13dp"
                        android:fontFamily="@font/quicksand_light"
                        android:text="@string/DoisCifroes"
                        android:layout_height="30dp"
                        android:layout_width="30dp"
                        android:textSize="15sp"/>

                    <TextView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:gravity="left"
                        app:drawableRightCompat="@drawable/ic_star"
                        />

                    <TextView
                        android:layout_marginStart="10dp"
                        android:fontFamily="@font/quicksand_light"
                        android:gravity="center_vertical"
                        android:text="@string/notaBar1"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:textSize="15sp"/>

                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="160dp"
                android:layout_height="205dp"
                android:layout_marginStart="200dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="20dp"
                    android:layout_marginTop="20dp"
                    android:fontFamily="@font/quicksand_bold"
                    android:text="@string/assento"
                    android:textSize="18sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="20dp"
                    android:fontFamily="@font/quicksand_light"
                    android:text="@string/numAssento"
                    android:textSize="15sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="20dp"
                    android:layout_marginTop="5dp"
                    android:fontFamily="@font/quicksand_bold"
                    android:text="@string/nome"
                    android:textSize="18sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="20dp"
                    android:fontFamily="@font/quicksand_light"
                    android:text="@string/nomesReserva"
                    android:textSize="15sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="20dp"
                    android:layout_marginTop="5dp"
                    android:fontFamily="@font/quicksand_bold"
                    android:text="@string/dia"
                    android:textSize="18sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="20dp"
                    android:fontFamily="@font/quicksand_light"
                    android:text="@string/dataReserva1"
                    android:textSize="15sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="20dp"
                    android:layout_marginTop="5dp"
                    android:fontFamily="@font/quicksand_bold"
                    android:text="@string/hora"
                    android:textSize="18sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="20dp"
                    android:fontFamily="@font/quicksand_light"
                    android:text="@string/horaReserva"
                    android:textSize="15sp"/>

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        </RelativeLayout>
    </ScrollView>
