<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:background="@color/begeClaro"
        android:orientation="vertical"
        android:id="@+id/ll_nav_login">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="50dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/old_standard_tt_bold"
                android:text="@string/Entrar"
                android:textColor="@color/branco"
                android:textSize="33sp"
                android:layout_marginLeft="20dp"/>

            <ImageButton
                style="@style/botaoSeta"
                android:layout_gravity="right"
                android:layout_marginTop="-45dp"
                android:clickable="true"
                android:id="@+id/tv_seta_login"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/quicksand_bold"
                    android:text="@string/NãoPossuiConta"
                    android:textColor="@color/branco"
                    android:textSize="14sp"
                    android:layout_marginLeft="20dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:fontFamily="@font/quicksand_bold"
                    android:text="@string/Cadastrese"
                    android:textColor="@color/marrom"
                    android:textSize="14sp"
                    android:layout_marginLeft="10dp"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ll_nav_login"
        android:orientation="vertical"
        android:padding="30dp"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="Usuário"
            android:textSize="18sp"
            android:fontFamily="@font/quicksand_semibold"
            android:textColor="#1C1C28"
            />

        <EditText
            style="@style/EmailInput"
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/rounded_edittext"
            android:hint="@string/placeholderEmail"
            android:fontFamily="@font/quicksand_semibold"
            android:paddingLeft="10dp"
            android:layout_marginVertical="20dp"
            android:textSize="12sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="Senha"
            android:textSize="18sp"
            android:fontFamily="@font/quicksand_semibold"
            android:textColor="#1C1C28"
            />

        <EditText
            style="@style/EmailInput"
            android:id="@+id/et_senha"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/rounded_edittext"
            android:inputType="textPassword"
            android:hint="@string/placeholderSenha"
            android:paddingLeft="10dp"
            android:layout_marginVertical="20dp"
            android:textSize="12sp"/>

        <Button
            style="@style/botaoEntar"
            android:text="Entrar"
            android:id="@+id/bt_logar"
            android:layout_gravity="center"
            />
    </LinearLayout>
</RelativeLayout>